--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
   color: white;
 }
 
+
 .info-container {
   display: flex;
   justify-content: center;
@@ -146,6 +147,20 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
+
+  .header {
+    font-size: 1.5rem;
+  }
+
+  .rules-container .rules {
+  font-size: 0.8rem;
+  }
+
+  .rules-container button {
+    width: 7vw;
+    height: 5vh;
+    font-size: 0.5rem;
+  }
 
   .info-container {
     height: 13rem;
